--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-socket-server.port=8085
+spring.main.web-application-type=none
+
+socket-server.port=8080
 socket-server.host=localhost
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
